--- a/poster.html
+++ b/poster.html
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <form>
-                <div class="from-group">
+                <div class="form-group">
                     <label for="comment">Your Comment</label>
                     <textarea name="commend" id="comment" class="comment-area"></textarea>
                 </div>
