build signup page

--- a/login.html
+++ b/login.html
@@ -22,11 +22,11 @@
     </header>
     <main>
         <section>
-            <div class="dashboard-container">
-                <div class="dashboard-title">
+            <div class="section-container">
+                <div class="section-header">
                     <span>Login</span>
                 </div>
-                <div class="dashboard-body">
+                <div class="section-body">
                     <div class="form-group">
                         <label for="user-name">Username</label>
                         <input type="text" id="user-name" name="user-name" class="input">
@@ -36,7 +36,9 @@
                         <input type="password" id="password" name="password" class="input">
                     </div>
                     <button class="btn">Login</button>
-                    <a href="#" class="link">Sign Up!</a>
+                    <div style="margin-top: 20px;">
+                        <a href="#" class="link">Sign Up!</a>
+                    </div>
                 </div>
             </div>
         </section>
