--- a/dashboard.html
+++ b/dashboard.html
@@ -24,12 +24,12 @@
     </header>
     <main>
         <section>
-            <form>
-                <div class="dashboard-container">
-                    <div class="dashboard-title">
+            <form id="post-form">
+                <div class="section-container">
+                    <div class="section-header">
                         <span>Create New Post</span>
                     </div>
-                    <div class="dashboard-body">
+                    <div class="section-body">
                         <div class="form-group">
                             <label for="title">Title</label>
                             <input type="text" id="new-poster-title" name="title" class="input">
@@ -38,12 +38,12 @@
                             <label for="content">Content</label>
                             <textarea name="content" id="new-poster-content"></textarea>
                         </div>
-                        <button class="btn">Create</button>
+                        <button class="btn" type="submit">Create</button>
                     </div>
                 </div>
             </form>
             <div class="btn-container">
-                <button class="btn btn--add">+ New Post</button>
+                <button class="btn btn--add" id="addNewPostBtn">+ New Post</button>
             </div>
         </section>
     </main>
